<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/wrap_roundinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/string_combo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_combo"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_combo_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_none" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/wrap_dice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wrap_roundinfo"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center" >

        <ImageView
            android:id="@+id/dice_1"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="32dp"
            android:layout_marginRight="32dp"
            android:contentDescription="@string/description_dice_1"
            android:src="@drawable/dice_unknown" />

        <ImageView
            android:id="@+id/dice_2"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="32dp"
            android:layout_marginRight="32dp"
            android:layout_toRightOf="@id/dice_1"
            android:contentDescription="@string/description_dice_2"
            android:src="@drawable/dice_unknown" />

        <ImageView
            android:id="@+id/dice_3"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="32dp"
            android:layout_toRightOf="@id/dice_2"
            android:contentDescription="@string/description_dice_3"
            android:src="@drawable/dice_unknown" />

        <ImageView
            android:id="@+id/dice_4"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_below="@id/dice_1"
            android:layout_marginRight="32dp"
            android:contentDescription="@string/description_dice_4"
            android:src="@drawable/dice_unknown" />

        <ImageView
            android:id="@+id/dice_5"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_below="@id/dice_2"
            android:layout_marginRight="32dp"
            android:layout_toRightOf="@id/dice_4"
            android:contentDescription="@string/description_dice_5"
            android:src="@drawable/dice_unknown" />

        <ImageView
            android:id="@+id/dice_6"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_below="@id/dice_3"
            android:layout_toRightOf="@id/dice_5"
            android:contentDescription="@string/description_dice_6"
            android:src="@drawable/dice_unknown" />
    </RelativeLayout>

    <com.ninetwozero.common.widgets.MarqueeTextView
        android:id="@+id/text_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wrap_dice"
        android:ellipsize="marquee"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/wrap_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="2" >

        <Button
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/text_save" />

        <Button
            android:id="@+id/button_roll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_roll" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/wrap_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_status"
        android:layout_margin="4dp"
        android:background="#EEE"
        android:padding="4dp" >

        <TableRow
            android:id="@+id/wrap_titles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="4" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:text="@string/text_player"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_score"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/text_num_rounds"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:gravity="right"
                android:text="@string/text_num_rolls"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/wrap_player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="4" >

            <TextView
                android:id="@+id/text_player_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:text="@string/mrawesome" />

            <TextView
                android:id="@+id/text_player_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:id="@+id/text_player_round_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:gravity="center" />

            <TextView
                android:id="@+id/text_player_roll_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:gravity="right" />
        </TableRow>

        <TableRow
            android:id="@+id/wrap_player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:weightSum="4" >

            <TextView
                android:id="@+id/text_player_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:text="@string/app_name"
                tools:ignore="DuplicateIds" />

            <TextView
                android:id="@+id/text_player_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                tools:ignore="DuplicateIds" />

            <TextView
                android:id="@+id/text_player_round_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:gravity="center"
                tools:ignore="DuplicateIds" />

            <TextView
                android:id="@+id/text_player_roll_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:gravity="right"
                tools:ignore="DuplicateIds" />
        </TableRow>
    </TableLayout>

</RelativeLayout>